feat: support custom optimizer weights
